<resources>
    <string name="app_name">NewsDalMondo</string>

    <string name="title">Seleziona il Paese</string>
    <string name="country">Paese d\'interesse</string>

    <string name="france">Francia</string>
    <string name="germany">Germania</string>
    <string name="italy">Italia</string>
    <string name="spain">Spagna</string>
    <string name="united_states">Stati Uniti</string>

    <string-array name="country_selector">
        <item>Italia</item>
        <item>Germania</item>
        <item>Francia</item>
        <item>Spagna</item>
        <item>USA</item>
    </string-array>

    <string name="topic">Area d\'interesse</string>

    <string name="business">Finanza</string>
    <string name="entertainment">Intrattenimento</string>
    <string name="general">Generale</string>
    <string name="healt">Salute</string>
    <string name="science">Scienza</string>
    <string name="sports">Sport</string>
    <string name="technology">Technologia</string>

    <string name="go">Go</string>
    <string name="ex">Che fai</string>
    <string name="errore">Seleziona almeno un paese ed un argomento</string>

    <string name="news">Notizie</string>
    <string name="topic_news">Notizie d\'interesse</string>
    <string name="favourites">Preferiti</string>

    <string name="hello_country_news">Hello country news</string>
    <string name="hello_topics">Hello topics</string>
    <string name="hello_favourites">Hello favourites</string>

    <string name="delete_fav">Cancella tutto</string>
</resources>