<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation_graph"
    app:startDestination="@id/menu_notizie">

    <fragment
        android:id="@+id/menu_notizie"
        android:name="it.unimib.newsdalmondo.CountryNewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_country_news" />
    <fragment
        android:id="@+id/menu_interesse"
        android:name="it.unimib.newsdalmondo.TopicNewsFragment"
        android:label="@string/topic"
        tools:layout="@layout/fragment_topic_news" />
    <fragment
        android:id="@+id/menu_preferiti"
        android:name="it.unimib.newsdalmondo.FavouritesNewsFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites_news" />
</navigation>